  * dh_dwz: Add new experimental tool to run dwz(1) to deduplicate
    ELF debugging symbols.  It should be generally be run before
    dh_strip (as dh_strip compresses the debug symbols and dwz
    expects uncompressed debug symbols).  (Closes: #878888)
  * dwz.pm: New sequence to add dh_dwz to the sequence.
  * d/control: Add a Suggets on dwz for the optional dh_dwz tool.

 -- Niels Thykier <niels@thykier.net>  Tue, 24 Oct 2017 05:45:09 +0000

debhelper (10.10.3) unstable; urgency=medium

  * dh_strip: Skip the entire directory when an exclude rule
    parameter matches it.
  * dh_fixperms: Improve the documentation to assume less familarity
    with "Rules-Requires-Root" (R³).
  * dh_usrlocal: Ditto.
  * dh_builddeb: Ditto.
  * dh_usrlocal: Correct the group name when creating directories
    owned by "root:staff".  Thanks to Paul Gevers for reporting
    the bug.  (Closes: #879643)
  * dh_usrlocal: Fix inverted boolean logic that made dh_usrlocal
    ignore ownership of directories when it should have preserved
    them.

 -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 21:24:08 +0000

debhelper (10.10.2) unstable; urgency=medium

  * Dh_Lib: Fix uninitialized warning in find_hardlinks that
    broke dh_compress's ability to deal with hardlinks.  Thanks
    to Ondřej Surý for finding the bug.

 -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 21:21:58 +0000

debhelper (10.10.1) unstable; urgency=medium

  * debhelper.pod: Document that all tools by default must be run
    in the root of an unpacked source.
  * dh: Clarify that --list can be run anywhere.
  * dh_testroot: Temporarily cope with being run outside a source
    root.  (Closes: #879478)
  * dh_testroot: Update manpage to mention its new scope.
  * d/control: Bump (build-)dependency on dpkg to 1.19.0.3~.  That
    was technically necessary already in the previous upload.

 -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 09:00:12 +0000

debhelper (10.10) unstable; urgency=medium
